mobile cutoff fix

--- a/css/nicki.css
+++ b/css/nicki.css
@@ -9,13 +9,10 @@
 	 height:170vh;
 	 background-color: #F24095;
 
-	 position: fixed; 
-	  top: 0; 
-	  left: 0; 
 
-	  /* Preserve aspet ratio */
-	  min-width: 100%;
-	  min-height: 100%;
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
 }
 
 
